--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -36,6 +36,8 @@
       </p>
 
       <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="布娜飛比利時啤酒餐廳" style="max-width: 600px;">
+      
     </div>
+    <a href="/">back</a>
   </div>
 </div>
