--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,3 @@
-
 <!-- search bar -->
 <div class="container search-bar">
     <div class="search-bar-outer">
@@ -26,9 +25,7 @@
                 {{#each restaurants}}
                 <a href="/restaurants/{{this._id}}" class="text-secondary">
                     <div class="card mb-3">
-                        <img class="card-img-top"
-                            src="{{this.image}}"
-                            alt="Sababa 沙巴巴中東美食">
+                        <img class="card-img-top" src="{{this.image}}" alt="Sababa 沙巴巴中東美食">
                         <div class="card-body p-3">
                             <h6 class="card-title mb-1">{{this.name}}</h6>
 
@@ -40,7 +37,13 @@
                                 {{this.rating}}
                                 <i class="fas fa-star fa-xs"></i>
                             </span>
-
+                            <div>
+                                <a href="/restaurants/{{this._id}}/edit">edit</a>
+                                <a href="/restaurants/{{this._id}}">detail</a>
+                                <form action="/restaurants/{{this._id}}/delete"method="POST" style="display: inline;">
+                                    <button type="submit">delete</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </a>
