--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
                 <h4 class="mb-2">尋找餐廳：</h4>
                 <div class="input-group">
                     <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類"
-                        aria-label="Restaurant Name..." value="" aria-describedby="search-button">
+                        aria-label="Restaurant Name..." value="{{searchWord}}" aria-describedby="search-button">
                     <div class="input-group-append">
                         <button class="btn btn-major" type="submit" id="search-button"><i
                                 class="fas fa-search"></i></button>
@@ -19,14 +19,14 @@
 
 <!-- restaurant list -->
 <div class="container mt-5">
+            <a href="/restaurants/new">Create</a>
     <div class="row">
-        <div class="col-md-10 col-12 mx-auto">
-            <a href="./restaurants/new">Create</a>
-            <div class="card-columns">
                 {{#each restaurants}}
+        <div class="col-md-4 col-12 mx-auto">
+            <div class="card-columns mt-3 d-flex">
                 <a href="/restaurants/{{this._id}}" class="text-secondary">
                     <div class="card mb-3">
-                        <img class="card-img-top" src="{{this.image}}" alt="Sababa 沙巴巴中東美食">
+                        <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
                         <div class="card-body p-3">
                             <h6 class="card-title mb-1">{{this.name}}</h6>
 
@@ -48,8 +48,8 @@
                         </div>
                     </div>
                 </a>
-                {{/each}}
             </div>
         </div>
+                {{/each}}
     </div>
 </div>
