--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -1,4 +1,3 @@
-
 <h1 class="mb-1 restaurant-show-title">{{restaurant.name}}</h1>
 <div class="container">
   <div class="row">
@@ -17,7 +16,7 @@
           <i class="fas fa-map-marker-alt pr-2"></i>
           地址：
         </span>
-       {{restaurant.location}}
+        {{restaurant.location}}
         <a href="{{restaurant.map}}" class="text-secondary" target="_blank">
           <i class="fas fa-location-arrow pr-2 fa-xs"></i>
         </a>
@@ -35,8 +34,9 @@
         {{restaurant.description}}
       </p>
 
-      <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="布娜飛比利時啤酒餐廳" style="max-width: 600px;">
-      
+      <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="布娜飛比利時啤酒餐廳"
+        style="max-width: 600px;">
+
     </div>
     <a href="/">back</a>
   </div>
