--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -38,6 +38,9 @@
         style="max-width: 600px;">
 
     </div>
-    <a href="/">back</a>
+    <div>
+    <a href="/restaurants/{{restaurant._id}}/edit" class="btn btn-info">edit</a>
+    <a href="/" class="btn btn-info">back</a>
+    </div>
   </div>
 </div>
