--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -19,8 +19,7 @@
                 <div class="form-group d-flex">
                     <label class="col-3" for="image">圖片網址*</label>
                     <input class="col-8" type="text" name="image" id="image" value=""
-                        placeholder="https://www.google.com/search?q=%E7%8E%8B%E5%93%81..."
-                        required>
+                        placeholder="https://www.google.com/search?q=%E7%8E%8B%E5%93%81..." required>
                 </div>
                 <div class="form-group d-flex">
                     <label class="col-3" for="location">地址*</label>
@@ -45,8 +44,7 @@
                 <div class="form-group d-flex">
                     <label class="col-3" for="description">描述*</label>
                     <textarea class="col-8" name="description" id="description" value=""
-                        placeholder="捷運松山新店線古亭站6號出口，直行羅斯福路約5分鐘可達，臨近鬧區西門町搭乘計程車與捷運皆十分便利..."
-                        required></textarea>
+                        placeholder="捷運松山新店線古亭站6號出口，直行羅斯福路約5分鐘可達，臨近鬧區西門町搭乘計程車與捷運皆十分便利..." required></textarea>
                 </div>
                 <p>(*為必填)</p>
                 <div class="form-group d-flex justify-content-center">
@@ -54,6 +52,8 @@
                 </div>
             </form>
         </div>
-        <a href="/" class="text-rigth">back</a>
+        <div>
+            <a href="/" class="btn btn-info">back</a>
+        </div>
     </div>
 </div>
