--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,12 +15,15 @@
             </form>
         </div>
     </div>
+
 </div>
 
 <!-- restaurant list -->
 <div class="container mt-5">
     <a href="/restaurants/new" class="btn btn-info">Create</a>
     <div class="row">
+
+        {{#if restaurants}}
         {{#each restaurants}}
         <div class="col-md-4 col-12 mx-auto">
             <div class="card-columns mt-3 d-flex">
@@ -41,15 +44,47 @@
                             <div>
                                 <a href="/restaurants/{{this._id}}/edit" class="btn btn-info">edit</a>
                                 <a href="/restaurants/{{this._id}}" class="btn btn-info">detail</a>
-                                <form action="/restaurants/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
-                                    <button type="submit" class="btn btn-danger">delete</button>
-                                </form>
+                                <button type="submit" class="btn btn-danger" data-toggle="modal"
+                                    data-target="#Modal{{this._id}}">delete</button>
+
                             </div>
+
                         </div>
                     </div>
                 </a>
             </div>
+            <!-- Modal -->
+            <div class="modal fade" id="Modal{{this._id}}" tabindex="-1" role="dialog"
+                aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">確認刪除?</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            {{this.name}}
+                        </div>
+                        <div class="modal-footer">
+                            <form action="/restaurants/{{this._id}}?_method=DELETE" method="POST"
+                                style="display: inline;">
+                                <button type="submit" class="btn btn-danger">delete</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         {{/each}}
+
+        {{else}}
+        <div class="col-md-4 col-12 mx-auto font-weight-bold h1">
+            <p class="">查無資料!!</p>
+
+        </div>
+        {{/if}}
     </div>
 </div>
